k8s-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: petclinic
  labels:
    app: spring-petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      imagePullSecrets:
      - name: harbor-creds
      containers:
      - name: spring-petclinic
        image: nitashav/spring-petclinic:V1-b5.20210225.175528
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 3
