k8s-deploy/all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
  namespace: petclinic
  labels:
    app: spring-petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-petclinic
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
      - name: spring-petclinic
        image: nitashav/spring-petclinic:V1-b29.20201210.185317
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: petclinic
  labels:
    app: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
  - name: http
    protocol: TCP
    port: 8080
