k8s-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: petclinic
  labels:
    app: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
  - name: http
    protocol: TCP
    port: 8080
